# Coffee-app-Backend-Rust

./: .env.example  .gitignore  AUTHORIZATION_MIDDLEWARE_USAGE.md  AUTHORIZATION_ROUTES.md  BUSINESS_RULES_API.md  BUSINESS_RULES_CONFIGURATION.md  BUSINESS_RULES_DEPLOYMENT.md  BUSINESS_RULES_INTEGRATION.md  BUSINESS_RULES_PERFORMANCE.md  BUSINESS_RULES_SUMMARY.md  Cargo.toml  DATABASE_SETUP.md  Dockerfile  README.md  docker-compose.yml  seed_data.sql
migrations/: 20260104000000_create_coffees_table.sql  20260107000000_fix_rating_type.sql  20260130000000_simplify_coffees_table.sql  20260223000000_create_users_table.sql  20260223000001_create_refresh_tokens_table.sql  20260224000000_add_role_to_users.sql  20260227000000_create_reviews_table.sql  20260227000001_add_rating_columns_to_coffees.sql  20260228000000_create_orders_table.sql  20260228000001_create_order_items_table.sql  20260228000002_create_business_rules_tables.sql  20260228000003_seed_business_rules_data.sql  20260303000000_create_analytics_indexes.sql  20260304000000_create_performance_indexes.sql
scripts/: seed_production.bat  seed_production.sh
src/: cache.rs  config.rs  db.rs  error.rs  main.rs  models.rs  pagination.rs  query.rs  tests.rs  validation.rs
src/analytics/: API_DOCUMENTATION.txt  DEPLOYMENT_CHECKLIST.txt  README.md  TASK2_COMPLETION.md  TASK3_COMPLETION.md  TASK5_COMPLETION.md  TASK6_COMPLETION.md  TASK7_COMPLETION.md  TASK8_COMPLETION.md  error.rs  formatting.rs  mod.rs  routes.rs  tests.rs  types.rs  validation.rs
src/analytics/controllers/: mod.rs  (+4 more)
src/auth/: error.rs  handlers.rs  middleware.rs  mod.rs  models.rs  password.rs  repository.rs  service.rs  token.rs
src/business_rules/: audit.rs  config_store.rs  error.rs  handlers.rs  metrics.rs  mod.rs  types.rs
src/orders/: error.rs  handlers.rs  mod.rs  models.rs  price_calculator.rs  repository.rs  service.rs  status_machine.rs
src/reviews/: error.rs  handlers.rs  mod.rs  models.rs  rating_calculator.rs  repository.rs  service.rs  tests.rs
(+20 files in other folders)
