[package]
name = "coffee-api"
version = "0.1.0"
edition = "2021"

[lib]
name = "coffee_api"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "migrate", "chrono", "rust_decimal", "uuid"] }
rust_decimal = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
utoipa = { version = "4", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "6", features = ["axum"] }
validator = { version = "0.16", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
jsonwebtoken = "9"
argon2 = "0.5"
sha2 = "0.10"
rand = "0.8"
regex = "1"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"

[dev-dependencies]
proptest = "1"
axum-test = "14"
testcontainers = "0.15"
rust_decimal_macros = "1"
